# pdfss

./: .flake8  .gitignore  .hgtags  .travis.yml  MANIFEST.in  README.rst  mypy.ini  pdfss.py  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: release.yml  tox.yml
pdfss/: __init__.py
test/: test_pdfss.py
test/data/: broken_euro.py  edf_c1_10036338943_p1.py  edf_c1_10074973936_p5.py  edf_c1_10080595767_p1.py  edf_c2_10067224248_p5.py  edf_c2_10073292263_p1.py  edf_c2_10073292263_p18.py  edf_c2_10073292263_p27.py  edf_c2_10073292263_p30.py  text_merge1.py  text_merge2.py
