[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pdfss"
description = "PDF scraping system"
readme = "README.rst"
license = { text = "GPLv3" }
authors = [{ name = "Lowatt", email = "info@lowatt.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "typing-extensions",
    "pdfminer.six",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
typing = [
    "mypy",
]

[project.urls]
Source = "https://github.com/lowatt/pdfss"
Tracker = "https://github.com/lowatt/pdfss/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
